Vector and Matrix API are changed. dot, put, set, pop, dropColumn, setColumn, popColumn are added.